SUBDIRS = common adjustlevels solarize despeckle oilpaint emboss charcoal unsharp \
	  raindrop filmgrain freerotation adjustcurves sheartool antivignetting \
	  lensdistortion superimpose perspective border blurfx distortionfx \
	  inserttext infrared channelmixer texture whitebalance restoration \
	  inpainting blowup 

AUTOMAKE_OPTIONS = foreign 

MAINTAINERCLEANFILES = subdirs configure.in acinclude.m4 configure.files 
